<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.about.AboutFragment">

    <TextView
        android:id="@+id/author_label_text_view"
        style="@style/header_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/author_label_text"
        app:layout_constraintBottom_toTopOf="@+id/github_label_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/author_text_view"
        style="@style/text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:paddingStart="8dp"
        android:text="@string/author_name_text"
        app:layout_constraintBottom_toBottomOf="@+id/author_label_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/author_label_text_view"
        app:layout_constraintTop_toTopOf="@+id/author_label_text_view" />

    <TextView
        android:id="@+id/github_label_text_view"
        style="@style/header_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/github_label_text"
        app:layout_constraintBottom_toTopOf="@+id/date_label_text_view"
        app:layout_constraintStart_toStartOf="@+id/author_label_text_view"
        app:layout_constraintTop_toBottomOf="@+id/author_label_text_view" />

    <TextView
        android:id="@+id/github_text_view"
        style="@style/text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:autoLink="web"
        android:paddingStart="8dp"
        android:text="@string/github_link"
        app:layout_constraintBottom_toBottomOf="@+id/github_label_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/github_label_text_view"
        app:layout_constraintTop_toTopOf="@+id/github_label_text_view" />

    <TextView
        android:id="@+id/date_label_text_view"
        style="@style/header_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/date_of_creation_label_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/author_label_text_view"
        app:layout_constraintTop_toBottomOf="@+id/github_label_text_view" />

    <TextView
        android:id="@+id/date_text_view"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/date_of_creation_text"
        app:layout_constraintBottom_toBottomOf="@+id/date_label_text_view"
        app:layout_constraintStart_toEndOf="@+id/date_label_text_view"
        app:layout_constraintTop_toTopOf="@+id/date_label_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>